fixes volume topology layout and a layout bug on the allocation-bar Ticket: #15078

--- a/ui/controls/allocation-bar.reel/allocation-bar.css
+++ b/ui/controls/allocation-bar.reel/allocation-bar.css
@@ -1,6 +1,6 @@
 .AllocationBar {
     display: flex;
-    height: 5px;
+    height: 1.5em;
 }
 
 .AllocationBar-segement {
