--- a/ui/inspectors/topology.reel/topology.css
+++ b/ui/inspectors/topology.reel/topology.css
@@ -1,20 +1,30 @@
 .TopologyEdit {
-    flex: 1;
-    min-width: 800px;
-    display: flex;
+    min-width: 37em;
+}
+
+.TopologyEdit .Inspector {
+    /* magic number tided to sidebar width */
+    margin-right: 13.2em;
 }
 
 .TopologyEdit .Inspector-body {
     margin: 0;
-    display: flex;
-    flex: 1;
-}
-
-.TopologyEdit-content .Topology {
-    min-width: 500px;
 }
 
 .TopologyEdit-content {
-    display: flex;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.TopologyEdit-sidebar {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    /* magic number tied to inspector margin */
+    width: 13.2em;
+    background-color: #2F3233;
+    overflow: hidden;
+    border-left: 2px solid #232629;
 }
